# tic-tac-toe

./: CMakeLists.txt  README.md
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp  model.cpp  model.h
test/: CMakeLists.txt
